@@ -20,6 +20,7 @@ xine-lib (1-rc3)
   * fix syncing code of audio visualization post plugins
     (goom video does not jump any more)
   * problem with long frame durations fixed
+  * seek timeout in RIP input plugin
 
 xine-lib (1-rc2)
   * XvMC support for hardware accelerated mpeg2 playback (-V xvmc)
